Fix Buttons size required
Fix border Color

Fix background images

Fix another found issue with the Get my resume button (was not centered in the mobile version)

--- a/cards.css
+++ b/cards.css
@@ -49,6 +49,8 @@
     margin: 2px;
     border: none;
     color: #fff;
+    width: 122px;
+    height: 48px;
     background-color: #36b37f;
   }
 
@@ -80,6 +82,9 @@
   .resume-btn {
     margin-left: 25%;
     margin-right: 25%;
+    height: 48px;
+    width: 159px;
+    align-self: center;
   }
 
   .new-logo {
