--- a/second-page-style.css
+++ b/second-page-style.css
@@ -43,7 +43,7 @@
   .article-aboutme {
     display: grid;
     background: #ebf0ee;
-    border: 1px solid #000;
+    border: 1px solid #d0d9d4;
     border-radius: 8px;
     width: 327px;
     height: 474px;
